feat: updated staff members

--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -92,8 +92,8 @@ title: About KSI
             </div>
             <div class="row align-center">
                 <div class="col-12 col-12-medium">
-                    <span class="image image-about">{% picture halfpage images/about/dadela.jpg %}</span>
-                    <h3>Tomasz Dądela</h3>
+                    <span class="image image-about">{% picture halfpage images/about/hoffmann.jpg %}</span>
+                    <h3>Michał Hoffmann</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
             </div>
@@ -149,6 +149,9 @@ title: About KSI
                         <li>Ignacy Alwasiak</li>
                         <li>Mikołaj Janusz</li>
                         <li>Piotr Zieliński</li>
+                        <li>Tomasz Kulis</li>
+                        <li>Łukasz Drukała</li>
+                        <li>Michał Latra</li>
                     </ul>
                 </div>
             </div>
@@ -164,8 +167,8 @@ title: About KSI
                     <h2>{% t 'housekeepers' %}</h2>
                     <p>{% t 'housekeepers-about' %}</p>
                     <ul>
-                        <li>Monika Mikuła</li>
-                        <li>Jakub Parapura</li>
+                        <li>Filip Jasionowicz</li>
+                        <li>Krzysztof Gębka</li>
                     </ul>
                 </div>
                 <div class="col-6 col-12-medium"></div>
