Add info about new board

--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -59,41 +59,41 @@ title: About KSI
             <div class="row align-center">
                 <div class="col-3 col-12-medium"></div>
                 <div class="col-6 col-12-medium">
-                    <span class="image image-about">{% picture halfpage images/about/stachura.jpg %}</span>
-                    <h3>Franciszek Stachura</h3>
+                    <span class="image image-about">{% picture halfpage images/about/rogalski.jpg %}</span>
+                    <h3>Patryk Rogalski</h3>
                     <h5>{% t 'president' %}</h5>
                 </div>
                 <div class="col-3 col-12-medium"></div>
             </div>
             <div class="row align-center">
                 <div class="col-6 col-12-medium">
-                    <span class="image image-about">{% picture halfpage images/about/rogalski.jpg %}</span>
-                    <h3>Patryk Rogalski</h3>
+                    <span class="image image-about">{% picture halfpage images/about/zygis.jpg %}</span>
+                    <h3>Weronika Żygis</h3>
                     <h5>{% t 'vp' %}</h5>
                 </div>
                 <div class="col-6 col-12-medium">
-                    <span class="image image-about">{% picture halfpage images/about/baran.jpg %}</span>
-                    <h3>Konrad Baran</h3>
+                    <span class="image image-about">{% picture halfpage images/about/kulis.jpg %}</span>
+                    <h3>Tomasz Kulis</h3>
                     <h5>{% t 'cfo' %}</h5>
                 </div>
             </div>
             <br/>
             <div class="row align-center">
                 <div class="col-6 col-12-medium">
-                    <span class="image image-about">{% picture halfpage images/about/brachmanska.jpg %}</span>
-                    <h3>Agata Brachmańska</h3>
+                    <span class="image image-about">{% picture halfpage images/about/kulas.jpg %}</span>
+                    <h3>Karolina Kulas</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
                 <div class="col-6 col-12-medium">
-                    <span class="image image-about">{% picture halfpage images/about/berestka.jpg %}</span>
-                    <h3>Piotr Berestka</h3>
+                    <span class="image image-about">{% picture halfpage images/about/tyton.jpg %}</span>
+                    <h3>Adam Tytoń</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
             </div>
             <div class="row align-center">
                 <div class="col-12 col-12-medium">
-                    <span class="image image-about">{% picture halfpage images/about/hoffmann.jpg %}</span>
-                    <h3>Michał Hoffmann</h3>
+                    <span class="image image-about">{% picture halfpage images/about/wisniewski.jpg %}</span>
+                    <h3>Aleksander Wiśniewski</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
             </div>
@@ -126,9 +126,9 @@ title: About KSI
                     <h2>{% t 'audit-committee' %}</h2>
                     <p>{% t 'audit-committee-about' %}</p>
                     <ul>
-                        <li>Filip Szymeczko</li>
-                        <li>Dominika Duda</li>
-                        <li>Jakub Parapura</li>
+                        <li>Franciszek Stachura</li>
+                        <li>Tomasz Miśkowicz</li>
+                        <li>Krzysztof Gębka</li>
                     </ul>
                 </div>
                 <div class="col-6 col-12-medium"></div>
@@ -146,12 +146,12 @@ title: About KSI
                     <h2>{% t 'admins' %}</h2>
                     <p>{% t 'admins-about' %}</p>
                     <ul>
-                        <li>Ignacy Alwasiak</li>
-                        <li>Mikołaj Janusz</li>
-                        <li>Piotr Zieliński</li>
                         <li>Tomasz Kulis</li>
                         <li>Łukasz Drukała</li>
                         <li>Michał Latra</li>
+                        <li>Ignacy Alwasiak</li>
+                        <li>Mikołaj Janusz</li>
+                        <li>Piotr Zieliński</li>
                     </ul>
                 </div>
             </div>
