Add Franciszek Stachura to admins list

--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -146,6 +146,7 @@ title: About KSI
                     <h2>{% t 'admins' %}</h2>
                     <p>{% t 'admins-about' %}</p>
                     <ul>
+                        <li>Franciszek Stachura</li>
                         <li>Tomasz Kulis</li>
                         <li>Łukasz Drukała</li>
                         <li>Michał Latra</li>
