Update honorary members list and KSI decades

--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -194,6 +194,8 @@ title: About KSI
                     <h2>{% t 'honorary' %}</h2>
                     <p>{% t 'honorary-about' %}</p>
                     <ul>
+                        <li>Piotr Zieliński</li>
+                        <li>Franciszek Stachura</li>
                         <li>Filip Szymeczko</li>
                         <li>Paweł Ryś</li>
                         <li>Mateusz Maćkowski</li>
